Update home page

--- a/style.css
+++ b/style.css
@@ -11,6 +11,11 @@ body {
   padding: 0;
   margin: 0;
   font-family: var(--dm-serif-display);
+  height: 100dvh;
+  width: 100dvw;
+  background-color: #141414;
+  color: #fff;
+  overflow: hidden;
 }
 
 h1,
@@ -21,21 +26,51 @@ h5 {
   font-family: var(--cormorant-garamond);
 }
 
-.height-100dvh {
-  height: 100dvh;
+a {
+  color: inherit;
+  text-decoration: none;
 }
 
-.img-object-fit-cover {
-  width: 100%;
-  object-fit: cover;
-}
-
-.stacked-content {
+.navbar ul {
+  list-style-type: none;
+  padding-left: 0;
   display: grid;
   place-items: center;
+  gap: 1em;
+  grid-auto-flow: column;
+  align-content: space-evenly;
 }
 
-.stacked-content > * {
-  grid-row: 1/-1;
-  grid-column: 1/-1;
+#image-track {
+  display: flex;
+  gap: 4dvmin;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(0, -50%);
+  user-select: none;
+}
+
+#image-track .image {
+  width: 40dvmin;
+  height: 56dvmin;
+  object-fit: cover;
+  object-position: right center;
+}
+
+@keyframes arrow-left-move {
+  0%,
+  100% {
+    left: 0;
+  }
+  50% {
+    left: 0.5%;
+  }
+}
+
+.arrow {
+  width: 10px;
+  height: 10px;
+  position: relative;
+  animation: arrow-left-move 1.5s infinite ease-in-out;
 }
