--- a/style.css
+++ b/style.css
@@ -26,8 +26,12 @@
 }
 
 :root {
+  color-scheme: dark light;
+
   /* Fonts */
-  --font-main: 'TeX Gyre Heros', sans-serif;
+  /* --font-main: 'TeX Gyre Heros', sans-serif; */
+  --font-stack-didone: Didot, 'Bodoni MT', 'Noto Serif Display',
+    'URW Palladio L', P052, Sylfaen, serif;
 
   /* Colors */
   --light-bg-color: #f5f5f7; /* rgb(245, 245, 247) */
@@ -51,191 +55,28 @@
   --color-link: #2997ff; /* rgb(41, 151, 255) */
   --color-link-hover: #2954ff; /* rgb(41, 84, 255) */
 
-  --color-white: #ffffff;
-  --color-black: #000000;
+  /* --color-dark: #211f1b;
+  --color-light: #e9e8e2; */
+  --color-light: hsl(51, 3%, 92%);
+  --color-dark: hsl(40, 18%, 12%);
+
+  /* --color-white: #ffffff;
+  --color-black: #000000; */
+  --color-white: hsl(0, 0%, 100%);
+  --color-black: hsl(0, 0%, 0%);
 }
 
 body {
   padding: 0;
   margin: 0;
-  width: 100%;
-  font-family: var(--font-main);
-  font-size: 17px;
-  /* height: 100dvh; */
-  /* overflow: hidden; */
-  /* line-height: 1.47059; */
-  font-weight: 400;
-  letter-spacing: -0.022em;
-  background-color: var(--bg-color);
-  color: var(--color-primary);
-}
-
-a {
-  text-decoration: none;
-  color: var(--color-link);
-}
-a:hover {
-  text-decoration: underline;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5 {
-  font-family: var(--font-main);
-  font-weight: bold;
-}
-
-p {
-  display: block;
-  margin: 0;
-  margin-block-start: 0;
-  margin-block-end: 0;
-  margin-inline-start: 0;
-  margin-inline-end: 0;
-}
-
-header {
-  position: sticky;
-  top: 0;
-  z-index: 9999;
-}
-
-.navbar {
-  background-color: rgba(0, 0, 0, 0.6);
-  -webkit-backdrop-filter: saturate(180%) blur(16px);
-  backdrop-filter: saturate(180%) blur(16px);
-}
-
-.navbar .navbar-content {
-  padding: 0 22px;
-  margin: 0 auto;
-}
-
-.container {
-  margin: 0 auto;
-}
-/* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
-  .navbar .navbar-content {
-    max-width: 540px;
-  }
-  .container {
-    max-width: 540px;
-  }
-}
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
-  .navbar .navbar-content {
-    max-width: 600px;
-  }
-  .container {
-    max-width: 600px;
-  }
-}
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
-  .navbar .navbar-content {
-    max-width: 768px;
-  }
-  .container {
-    max-width: 768px;
-  }
-}
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {
-  .navbar .navbar-content {
-    max-width: 992px;
-  }
-  .container {
-    max-width: 992px;
-  }
-}
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
-  .navbar .navbar-content {
-    max-width: 1200px;
-  }
-  .container {
-    max-width: 1200px;
-  }
-}
-
-.navbar .navbar-content ul {
-  list-style-type: none;
-  margin-block-start: 0;
-  margin-block-end: 0;
-  margin-inline-start: 0;
-  margin-inline-end: 0;
-  padding-inline-start: 0;
-  display: flex;
-  justify-content: space-between;
-}
-
-.navbar .navbar-content ul li {
-  padding: 8px 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.text-align-center {
-  text-align: center;
-}
-
-.text-align-right {
-  text-align: right;
-}
-
-.color-white {
-  color: var(--color-white);
-}
-
-.color-black {
+  font-family: var(--font-stack-didone);
+  background-color: var(--color-light);
   color: var(--color-black);
 }
 
-.float {
-  position: fixed;
-  width: 60px;
-  height: 60px;
-  bottom: 20px;
-  right: 20px;
-}
-
-.button {
-  background-color: var(--color-link);
-  color: var(--color-primary);
-  border: none;
-  cursor: pointer;
-  transition: color 0.3s ease-in;
-}
-.button:hover {
-  color: var(--color-link-hover);
-}
-
-.button-circle {
-  border-radius: 1000px;
-  padding: 10px;
-  display: flex;
-  justify-content: center;
-  align-item: center;
-}
-.shadow-1 {
-  box-shadow: 2px 2px 3px #999;
-}
-
-.welcome {
-  background-color: var(--color-black);
-  padding: 30px 0;
-}
-
-.hero {
-  width: 100%;
-}
-
-.hero-img {
-  width: 100%;
-  object-fit: contain;
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: var(--color-dark);
+    color: var(--color-white);
+  }
 }
