--- a/style.css
+++ b/style.css
@@ -7,30 +7,35 @@
   --font-system-ui: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif,
     'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 
-  /* --color-dark: #211f1b;
-  --color-light: #e9e8e2; */
-  --color-light: hsl(51, 3%, 92%);
-  --color-dark: hsl(40, 18%, 12%);
+  --color-white: hsla(0, 0%, 100%, 1);
+  --color-black: hsla(0, 0%, 0%, 1);
 
-  /* --color-white: #ffffff;
-  --color-black: #000000; */
-  --color-white: hsl(0, 0%, 100%);
-  --color-black: hsl(0, 0%, 0%);
+  --light-color-background: hsla(51, 3%, 92%, 1);
+  --light-color-primary: hsla(54, 6%, 33%, 1);
+  --light-color-secondary: hsla(48, 3%, 57%, 1);
+
+  --dark-color-background: hsla(40, 10%, 12%, 1);
+  --dark-color-primary: hsla(53, 11%, 45%, 1);
+  --dark-color-secondary: hsla(60, 5%, 37%, 1);
 }
 
 body {
-  padding: 0;
-  margin: 0;
+  background-color: var(--light-color-background);
+  color: var(--light-color-primary);
   font-family: var(--font-system-ui);
-  font-weight: 300;
-  background-color: var(--color-light);
-  color: var(--color-black);
+}
+
+.color-secondary {
+  color: var(--light-color-secondary);
 }
 
 @media (prefers-color-scheme: dark) {
   body {
-    background-color: var(--color-dark);
-    color: var(--color-white);
+    background-color: var(--dark-color-background);
+    color: var(--dark-color-primary);
+  }
+  .color-secondary {
+    color: var(--dark-color-secondary);
   }
 }
 
@@ -42,6 +47,58 @@ h5 {
   font-family: var(--font-stack-didone);
 }
 
-.font-didone {
-  font-family: var(--font-stack-didone);
+img {
+  font-style: italic;
+  max-width: 100%;
+  shape-margin: 1rem;
+  height: auto;
+  vertical-align: middle;
+}
+
+.container {
+  max-width: 90%;
+  margin: 0 auto;
+}
+
+.text-center {
+  text-align: center;
+}
+
+@keyframes parallax {
+  to {
+    transform: translateY(calc(var(--parallax-speed) * 200px));
+  }
+}
+
+.parallax {
+  position: relative;
+  display: grid;
+  grid-template-areas: 'stack';
+  min-height: 50vh;
+}
+
+.parallax > * {
+  grid-area: stack;
+  animation: parallax linear;
+  animation-timeline: scroll();
+  --parallax-speed: 1;
+}
+
+.parallax-background {
+  z-index: 0;
+  --parallax-speed: 1;
+}
+
+.parallax-foreground {
+  text-shadow: 0 2px 1rem var(--color-white);
+  z-index: 1;
+  --parallax-speed: 4;
+}
+
+.parallax-up {
+  --parallax-speed: -4;
+}
+
+.mb-large {
+  margin-bottom: 100px;
 }
