--- a/backup/style.css
+++ b/backup/style.css
@@ -1,81 +1,42 @@
-@import url('/assets/fonts/TeX-Gyre-Heros/texgyreheros-bold.otf');
-
-@font-face {
-  font-family: 'TeX Gyre Heros', sans-serif;
-  src: url('/assets/fonts/TeX-Gyre-Heros/texgyreheros-regular.otf')
-    format('opentype');
-}
-@font-face {
-  font-family: 'TeX Gyre Heros', sans-serif;
-  font-weight: bold;
-  src: url('/assets/fonts/TeX-Gyre-Heros/texgyreheros-bold.otf')
-    format('opentype');
-}
-@font-face {
-  font-family: 'TeX Gyre Heros', sans-serif;
-  font-style: italic;
-  src: url('/assets/fonts/TeX-Gyre-Heros/texgyreheros-italic.otf')
-    format('opentype');
-}
-@font-face {
-  font-family: 'TeX Gyre Heros', sans-serif;
-  font-weight: bold;
-  font-style: italic;
-  src: url('/assets/fonts/TeX-Gyre-Heros/texgyreheros-bolditalic.otf')
-    format('opentype');
-}
-
 :root {
+  color-scheme: dark light;
+
   /* Fonts */
-  --font-main: 'TeX Gyre Heros', sans-serif;
+  --font-stack-didone: Didot, 'Bodoni MT', 'Noto Serif Display',
+    'URW Palladio L', P052, Sylfaen, serif;
+  --font-system-ui: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif,
+    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 
-  /* Colors */
-  --light-bg-color: #f5f5f7; /* rgb(245, 245, 247) */
-  --light-color-primary: #1d1d1f; /* rgb(29, 29, 31) */
-  --light-color-primary-hover: #000000; /* rgb(0, 0, 0) */
-  --light-color-secondary: #6e6e73; /* rgb(110, 110, 115) */
-  --light-color-link: #0066cc; /* rgb(0, 102, 204) */
-  --light-color-link-hover: #0026cc; /* rgb(0, 38, 204) */
+  --color-white: hsla(0, 0%, 100%, 1);
+  --color-black: hsla(0, 0%, 0%, 1);
 
-  --dark-bg-color: #141414; /* rgb(20, 20, 20) */
-  --dark-color-primary: #f5f5f7; /* rgb(245, 245, 247) */
-  --dark-color-primary-hover: #0077ed; /* rgb(0, 119, 237) */
-  --dark-color-secondary: #aaaaaa; /* rgb(170, 170, 170) */
-  --dark-color-link: #2997ff; /* rgb(41, 151, 255) */
-  --dark-color-link-hover: #2954ff; /* rgb(41, 84, 255) */
+  --light-color-background: hsla(51, 3%, 92%, 1);
+  --light-color-primary: hsla(54, 6%, 33%, 1);
+  --light-color-secondary: hsla(48, 3%, 57%, 1);
 
-  --bg-color: #141414; /* rgb(20, 20, 20) */
-  --color-primary: #f5f5f7; /* rgb(245, 245, 247) */
-  --color-primary-hover: #0077ed; /* rgb(0, 119, 237) */
-  --color-secondary: #aaaaaa; /* rgb(170, 170, 170) */
-  --color-link: #2997ff; /* rgb(41, 151, 255) */
-  --color-link-hover: #2954ff; /* rgb(41, 84, 255) */
-
-  --color-white: #ffffff;
-  --color-black: #000000;
+  --dark-color-background: hsla(40, 10%, 12%, 1);
+  --dark-color-primary: hsla(53, 11%, 45%, 1);
+  --dark-color-secondary: hsla(60, 5%, 37%, 1);
 }
 
 body {
-  padding: 0;
-  margin: 0;
-  width: 100%;
-  font-family: var(--font-main);
-  font-size: 17px;
-  /* height: 100dvh; */
-  /* overflow: hidden; */
-  /* line-height: 1.47059; */
-  font-weight: 400;
-  letter-spacing: -0.022em;
-  background-color: var(--bg-color);
-  color: var(--color-primary);
+  background-color: var(--light-color-background);
+  color: var(--light-color-primary);
+  font-family: var(--font-system-ui);
 }
 
-a {
-  text-decoration: none;
-  color: var(--color-link);
+.color-secondary {
+  color: var(--light-color-secondary);
 }
-a:hover {
-  text-decoration: underline;
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: var(--dark-color-background);
+    color: var(--dark-color-primary);
+  }
+  .color-secondary {
+    color: var(--dark-color-secondary);
+  }
 }
 
 h1,
@@ -83,159 +44,61 @@ h2,
 h3,
 h4,
 h5 {
-  font-family: var(--font-main);
-  font-weight: bold;
+  font-family: var(--font-stack-didone);
 }
 
-p {
-  display: block;
-  margin: 0;
-  margin-block-start: 0;
-  margin-block-end: 0;
-  margin-inline-start: 0;
-  margin-inline-end: 0;
-}
-
-header {
-  position: sticky;
-  top: 0;
-  z-index: 9999;
-}
-
-.navbar {
-  background-color: rgba(0, 0, 0, 0.6);
-  -webkit-backdrop-filter: saturate(180%) blur(16px);
-  backdrop-filter: saturate(180%) blur(16px);
-}
-
-.navbar .navbar-content {
-  padding: 0 22px;
-  margin: 0 auto;
+img {
+  font-style: italic;
+  max-width: 100%;
+  shape-margin: 1rem;
+  height: auto;
+  vertical-align: middle;
 }
 
 .container {
+  max-width: 90%;
   margin: 0 auto;
 }
-/* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
-  .navbar .navbar-content {
-    max-width: 540px;
-  }
-  .container {
-    max-width: 540px;
-  }
-}
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
-  .navbar .navbar-content {
-    max-width: 600px;
-  }
-  .container {
-    max-width: 600px;
-  }
-}
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
-  .navbar .navbar-content {
-    max-width: 768px;
-  }
-  .container {
-    max-width: 768px;
-  }
-}
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {
-  .navbar .navbar-content {
-    max-width: 992px;
-  }
-  .container {
-    max-width: 992px;
-  }
-}
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
-  .navbar .navbar-content {
-    max-width: 1200px;
-  }
-  .container {
-    max-width: 1200px;
-  }
-}
 
-.navbar .navbar-content ul {
-  list-style-type: none;
-  margin-block-start: 0;
-  margin-block-end: 0;
-  margin-inline-start: 0;
-  margin-inline-end: 0;
-  padding-inline-start: 0;
-  display: flex;
-  justify-content: space-between;
-}
-
-.navbar .navbar-content ul li {
-  padding: 8px 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.text-align-center {
+.text-center {
   text-align: center;
 }
 
-.text-align-right {
-  text-align: right;
+@keyframes parallax {
+  to {
+    transform: translateY(calc(var(--parallax-speed) * 200px));
+  }
 }
 
-.color-white {
-  color: var(--color-white);
+.parallax {
+  position: relative;
+  display: grid;
+  grid-template-areas: 'stack';
+  min-height: 50vh;
 }
 
-.color-black {
-  color: var(--color-black);
+.parallax > * {
+  grid-area: stack;
+  animation: parallax linear;
+  animation-timeline: scroll();
+  --parallax-speed: 1;
 }
 
-.float {
-  position: fixed;
-  width: 60px;
-  height: 60px;
-  bottom: 20px;
-  right: 20px;
+.parallax-background {
+  z-index: 0;
+  --parallax-speed: 1;
 }
 
-.button {
-  background-color: var(--color-link);
-  color: var(--color-primary);
-  border: none;
-  cursor: pointer;
-  transition: color 0.3s ease-in;
-}
-.button:hover {
-  color: var(--color-link-hover);
+.parallax-foreground {
+  text-shadow: 0 2px 1rem var(--color-white);
+  z-index: 1;
+  --parallax-speed: 4;
 }
 
-.button-circle {
-  border-radius: 1000px;
-  padding: 10px;
-  display: flex;
-  justify-content: center;
-  align-item: center;
-}
-.shadow-1 {
-  box-shadow: 2px 2px 3px #999;
+.parallax-up {
+  --parallax-speed: -4;
 }
 
-.welcome {
-  background-color: var(--color-black);
-  padding: 30px 0;
-}
-
-.hero {
-  width: 100%;
-}
-
-.hero-img {
-  width: 100%;
-  object-fit: contain;
+.mb-large {
+  margin-bottom: 100px;
 }
