Update home page

--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@
   --font-mono-stack: Menlo, Consolas, Monaco, Liberation Mono, Lucida Console,
     monospace;
 
+  --background-color-dark: #303030;
+
   --color-white: #ffffff;
   --color-black: #000000;
 
@@ -21,6 +23,8 @@
   --font-size-xsmall: 12px;
 
   --color-gradient-primary: linear-gradient(#cae7ea, #d1e7de);
+
+  --color-link: #0866ff;
 }
 
 body {
@@ -31,6 +35,14 @@ body {
   color: var(--color-primary);
   font-family: var(--font-sans-serif-stack);
   font-size: var(--font-size-medium);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-weight: lighter;
 }
 
 .font-size-xlarge {
@@ -58,6 +70,10 @@ body {
 a {
   text-decoration: none;
   color: var(--color-primary);
+}
+
+a:hover {
+  color: var(--color-link);
 }
 
 .color-secondary {
@@ -99,4 +115,85 @@ img {
 
 .text-center {
   text-align: center;
+}
+
+.logo {
+  --border-thickness: 1px;
+  --border-color: var(--color-primary);
+  --border-width: 16px;
+
+  border: var(--border-thickness) solid #0000; /* space for the border */
+  --_g: #0000 90deg, var(--border-color) 0;
+  --_p: var(--border-width) var(--border-width) border-box no-repeat;
+  background: conic-gradient(
+        from 90deg at top var(--border-thickness) left var(--border-thickness),
+        var(--_g)
+      )
+      0 0 / var(--_p),
+    conic-gradient(
+        from 180deg at top var(--border-thickness) right var(--border-thickness),
+        var(--_g)
+      )
+      100% 0 / var(--_p),
+    conic-gradient(
+        from 0deg at bottom var(--border-thickness) left var(--border-thickness),
+        var(--_g)
+      )
+      0 100% / var(--_p),
+    conic-gradient(
+        from -90deg at bottom var(--border-thickness) right var(--border-thickness),
+        var(--_g)
+      )
+      100% 100% / var(--_p);
+
+  /*Irrelevant code*/
+  width: 80px;
+  height: 40px;
+  box-sizing: border-box;
+  display: inline-flex;
+  font-size: 32px;
+  font-weight: 100;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.top-nav {
+  display: flex;
+  justify-content: center;
+  box-sizing: border-box;
+}
+
+.item {
+  background-color: transparent;
+  display: inline-block;
+  align-self: center;
+  box-sizing: border-box;
+  padding: 16px;
+  text-align: center;
+  min-width: 100px;
+}
+
+.item:hover {
+  background-color: var(--color-gradient-primary);
+}
+
+.footer {
+  background-color: var(--background-color-dark);
+}
+
+.responsive {
+  display: flex;
+  justify-content: space-around;
+  padding-top: 36px;
+  padding-bottom: 36px;
+}
+
+@media (max-width: 480px) {
+  .responsive {
+    display: block;
+  }
+  .responsive div {
+    margin-bottom: 64px;
+  }
 }
