--- a/style.css
+++ b/style.css
@@ -218,8 +218,9 @@ img {
   max-width: 100%;
   margin: 0 auto;
   display: grid;
-  gap: 36px;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  gap: 12px;
+  grid-template-columns: repeat(auto-fit, minmax(360px, 20%));
+  justify-content: center;
 }
 
 .album-item {
