--- a/style.css
+++ b/style.css
@@ -228,8 +228,8 @@ img {
 }
 
 .album-item-name {
-  font-size: var(--font-size-medium);
-  font-weight: bold;
+  font-size: var(--font-size-large);
+  font-weight: lighter;
 }
 
 .album-item-thumb {
