--- a/style.css
+++ b/style.css
@@ -40,6 +40,30 @@
   font-display: swap;
 }
 
+@font-face {
+  font-family: 'Space Mono Bold';
+  src: url('/assets/fonts/SpaceMono-Bold.ttf') format('truetype');
+  font-weight: 100 900;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Space Mono Italic';
+  src: url('/assets/fonts/SpaceMono-Italic.ttf') format('truetype');
+  font-weight: 100 900;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Space Mono Bold Italic';
+  src: url('/assets/fonts/SpaceMono-BoldItalic.ttf') format('truetype');
+  font-weight: 100 900;
+  font-style: normal;
+  font-display: swap;
+}
+
 :root {
   /* Fonts */
   --font-heading: 'Playfair Display', serif;
